<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tuncaysenturk.jira.plugins</groupId>
    <artifactId>jira-twitter-plugin</artifactId>
    <version>2.0.0</version>
    <description>Twitter Plugin for JIRA, makes your company more social. Just configure with a Twitter account, then do your basic JIRA updates within Twitter, even though you do not have a VPN or direct connection to your company.</description>
    <scm/>
    <organization>
        <name>Tuncay Senturk</name>
    </organization>
    <name>Twitter Plugin for JIRA</name>
    <packaging>atlassian-plugin</packaging>
    <dependencies>
        <!-- JIRA API and core -->
		<dependency>
			<groupId>com.atlassian.jira</groupId>
			<artifactId>jira-api</artifactId>
			<version>${jira.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-all</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-library</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hamcrest</groupId>
					<artifactId>hamcrest-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.atlassian.jira</groupId>
			<artifactId>jira-core</artifactId>
			<version>${jira.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<!-- Spring libraries -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>2.5.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.osgi</groupId>
			<artifactId>spring-osgi-core</artifactId>
			<version>1.2.1</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- Atlassian Helper libraries -->
		<dependency>
			<groupId>com.atlassian.sal</groupId>
			<artifactId>sal-api</artifactId>
			<version>${sal.api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.atlassian.templaterenderer</groupId>
			<artifactId>atlassian-template-renderer-api</artifactId>
			<version>${atlassian.templaterenderer.version}</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- Licensing -->
		<dependency>
			<groupId>com.atlassian.upm</groupId>
			<artifactId>licensing-api</artifactId>
			<version>${upm.license.compatibility.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.atlassian.upm</groupId>
			<artifactId>upm-api</artifactId>
			<version>${upm.license.compatibility.version}</version>
			<scope>provided</scope>
		</dependency>
        
        <!-- Active objects -->
		<dependency>
			<groupId>com.atlassian.activeobjects</groupId>
			<artifactId>activeobjects-plugin</artifactId>
			<version>${ao.version}</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<artifactId>guava</artifactId>
					<groupId>com.google.guava</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.atlassian.activeobjects</groupId>
			<artifactId>activeobjects-test</artifactId>
			<version>${ao.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>guava</artifactId>
					<groupId>com.google.guava</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<!-- Third party libraries -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>${javax.servlet.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.1.1</version>
			<scope>test</scope>
		</dependency>
        
        <!-- Twitter libraries -->
        <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.googlecode</groupId>
                    <artifactId>kryo</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-async</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-stream</artifactId>
            <version>3.0.3</version>
            <scope>compile</scope>
        </dependency>
        
        <!-- ##### TEST DEPENDENCIES ##### -->
        <dependency>
            <groupId>hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>1.8.0.10</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.6.2</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-jira-plugin</artifactId>
                <version>${amps.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <productVersion>${jira.version}</productVersion>
					<productDataVersion>${jira.data.version}</productDataVersion>
					<enableQuickReload>true</enableQuickReload>
					<enableFastdev>false</enableFastdev>
					<jvmArgs>-server -Xmx1g -XX:MaxPermSize=512m</jvmArgs>
					<systemPropertyVariables>
						<atlassian.mail.senddisabled>false</atlassian.mail.senddisabled>
					</systemPropertyVariables>
                    <instructions>
						<Import-Package>
							twitter4j*,
							!twitter4j.internal.http.alternative,
                        	!dalvik.system,
                        	!com.google.appengine.api.urlfetch,org.slf4j;version="1.5",
							*;version="0";resolution:=optional
						</Import-Package>
						<DynamicImport-Package>
							com.atlassian.upm.api.license;version="${upm.license.compatibility.version}",
							com.atlassian.upm.api.license.entity;version="${upm.license.compatibility.version}",
							com.atlassian.upm.api.util;version="${upm.license.compatibility.version}"
						</DynamicImport-Package>
						<Spring-Context>*;timeout:=60</Spring-Context>
					</instructions>
                </configuration>
            </plugin>
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
        </plugins>
    </build>
    <properties>
    	<ao.version>1.1.1</ao.version>
    	<atlassian.templaterenderer.version>1.5.5</atlassian.templaterenderer.version>
    	<amps.version>6.1.2</amps.version>
    	<guava.version>18.0</guava.version>
		<javax.servlet.version>2.5</javax.servlet.version>
        <jira.data.version>7.0.0-1</jira.data.version>
		<jira.version>7.1.8</jira.version>
		<sal.api.version>3.0.3</sal.api.version>
		<upm.license.compatibility.version>2.8</upm.license.compatibility.version>
    </properties>
</project>
